@@ -7,6 +7,9 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.test.StepVerifier;
 import ru.yandex.practicum.mymarket.cart.model.CartItemEntity;
 import ru.yandex.practicum.mymarket.cart.repo.CartItemRepository;
 import ru.yandex.practicum.mymarket.common.dto.CartAction;
@@ -14,11 +17,8 @@ import ru.yandex.practicum.mymarket.items.model.ItemEntity;
 import ru.yandex.practicum.mymarket.items.repo.ItemRepository;
 import ru.yandex.practicum.mymarket.testutil.TestEntityIds;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -38,9 +38,11 @@ class CartServiceTest {
 
     @Test
     void plus_createsNewRow_whenAbsent() {
-        when(cartItemRepository.findByItemId(10L)).thenReturn(Optional.empty());
+        when(cartItemRepository.findByItemId(10L)).thenReturn(Mono.empty());
+        when(cartItemRepository.save(any(CartItemEntity.class))).thenAnswer(inv -> Mono.just(inv.getArgument(0)));
 
-        cartService.changeCount(10L, CartAction.PLUS);
+        StepVerifier.create(cartService.changeCount(10L, CartAction.PLUS))
+                .verifyComplete();
 
         verify(cartItemRepository).save(entityCaptor.capture());
         CartItemEntity saved = entityCaptor.getValue();
@@ -53,35 +55,41 @@ class CartServiceTest {
     @Test
     void plus_increments_whenExists() {
         CartItemEntity existing = new CartItemEntity(10L, 2);
-        when(cartItemRepository.findByItemId(10L)).thenReturn(Optional.of(existing));
 
-        cartService.changeCount(10L, CartAction.PLUS);
+        when(cartItemRepository.findByItemId(10L)).thenReturn(Mono.just(existing));
+        when(cartItemRepository.save(any(CartItemEntity.class))).thenAnswer(inv -> Mono.just(inv.getArgument(0)));
+
+        StepVerifier.create(cartService.changeCount(10L, CartAction.PLUS))
+                .verifyComplete();
 
         verify(cartItemRepository).save(entityCaptor.capture());
-        CartItemEntity saved = entityCaptor.getValue();
-        assertThat(saved.getItemId()).isEqualTo(10L);
-        assertThat(saved.getCount()).isEqualTo(3);
+        assertThat(entityCaptor.getValue().getCount()).isEqualTo(3);
     }
 
     @Test
     void minus_decrements_whenCountMoreThanOne() {
         CartItemEntity existing = new CartItemEntity(10L, 2);
-        when(cartItemRepository.findByItemId(10L)).thenReturn(Optional.of(existing));
 
-        cartService.changeCount(10L, CartAction.MINUS);
+        when(cartItemRepository.findByItemId(10L)).thenReturn(Mono.just(existing));
+        when(cartItemRepository.save(any(CartItemEntity.class))).thenAnswer(inv -> Mono.just(inv.getArgument(0)));
+
+        StepVerifier.create(cartService.changeCount(10L, CartAction.MINUS))
+                .verifyComplete();
 
         verify(cartItemRepository).save(entityCaptor.capture());
-        CartItemEntity saved = entityCaptor.getValue();
-        assertThat(saved.getCount()).isEqualTo(1);
+        assertThat(entityCaptor.getValue().getCount()).isEqualTo(1);
         verify(cartItemRepository, never()).delete(any(CartItemEntity.class));
     }
 
     @Test
     void minus_deletes_whenCountBecomesZero() {
         CartItemEntity existing = new CartItemEntity(10L, 1);
-        when(cartItemRepository.findByItemId(10L)).thenReturn(Optional.of(existing));
 
-        cartService.changeCount(10L, CartAction.MINUS);
+        when(cartItemRepository.findByItemId(10L)).thenReturn(Mono.just(existing));
+        when(cartItemRepository.delete(existing)).thenReturn(Mono.empty());
+
+        StepVerifier.create(cartService.changeCount(10L, CartAction.MINUS))
+                .verifyComplete();
 
         verify(cartItemRepository).delete(existing);
         verify(cartItemRepository, never()).save(any(CartItemEntity.class));
@@ -90,9 +98,12 @@ class CartServiceTest {
     @Test
     void delete_removesRow_whenExists() {
         CartItemEntity existing = new CartItemEntity(10L, 5);
-        when(cartItemRepository.findByItemId(10L)).thenReturn(Optional.of(existing));
 
-        cartService.changeCount(10L, CartAction.DELETE);
+        when(cartItemRepository.findByItemId(10L)).thenReturn(Mono.just(existing));
+        when(cartItemRepository.delete(existing)).thenReturn(Mono.empty());
+
+        StepVerifier.create(cartService.changeCount(10L, CartAction.DELETE))
+                .verifyComplete();
 
         verify(cartItemRepository).delete(existing);
         verify(cartItemRepository, never()).save(any(CartItemEntity.class));
@@ -100,9 +111,10 @@ class CartServiceTest {
 
     @Test
     void minus_doesNothing_whenAbsent() {
-        when(cartItemRepository.findByItemId(10L)).thenReturn(Optional.empty());
+        when(cartItemRepository.findByItemId(10L)).thenReturn(Mono.empty());
 
-        cartService.changeCount(10L, CartAction.MINUS);
+        StepVerifier.create(cartService.changeCount(10L, CartAction.MINUS))
+                .verifyComplete();
 
         verify(cartItemRepository, never()).save(any());
         verify(cartItemRepository, never()).delete(any());
@@ -110,36 +122,39 @@ class CartServiceTest {
 
     @Test
     void getCountsByItemId_returnsMap() {
-        when(cartItemRepository.findAll()).thenReturn(List.of(
+        when(cartItemRepository.findAll()).thenReturn(Flux.just(
                 new CartItemEntity(1L, 2),
                 new CartItemEntity(2L, 1)
         ));
 
-        Map<Long, Integer> map = cartService.getCountsByItemId();
-
-        assertThat(map).containsEntry(1L, 2);
-        assertThat(map).containsEntry(2L, 1);
+        StepVerifier.create(cartService.getCountsByItemId())
+                .assertNext(map -> {
+                    assertThat(map).containsEntry(1L, 2);
+                    assertThat(map).containsEntry(2L, 1);
+                })
+                .verifyComplete();
     }
 
     @Test
-    void getCartView_buildsItemsAndTotal() {
-        when(cartItemRepository.findAll()).thenReturn(List.of(
+    void getCartView_buildsItemsAndTotal_andNormalizesImgPath() {
+        when(cartItemRepository.findAll()).thenReturn(Flux.just(
                 new CartItemEntity(10L, 2),
                 new CartItemEntity(20L, 1)
         ));
 
         ItemEntity e1 = new ItemEntity("A", "d", "/images/a.jpg", 100L);
         ItemEntity e2 = new ItemEntity("B", "d", "/images/b.jpg", 50L);
-
         TestEntityIds.setId(e1, 10L);
         TestEntityIds.setId(e2, 20L);
 
-        when(itemRepository.findAllById(any())).thenReturn(List.of(e1, e2));
+        when(itemRepository.findAllById(any(Iterable.class))).thenReturn(Flux.just(e1, e2));
 
-        var view = cartService.getCartView();
-
-        assertThat(view.items()).hasSize(2);
-        assertThat(view.total()).isEqualTo(100L * 2 + 50L);
-        assertThat(view.items().getFirst().imgPath()).isEqualTo("images/a.jpg");
+        StepVerifier.create(cartService.getCartView())
+                .assertNext(view -> {
+                    assertThat(view.items()).hasSize(2);
+                    assertThat(view.total()).isEqualTo(100L * 2 + 50L);
+                    assertThat(view.items().get(0).imgPath()).isEqualTo("images/a.jpg");
+                })
+                .verifyComplete();
     }
 }
