@@ -1,68 +1,78 @@
 package ru.yandex.practicum.mymarket.items.repo;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
+import org.springframework.boot.test.autoconfigure.data.r2dbc.DataR2dbcTest;
+import org.springframework.context.annotation.Import;
 import org.springframework.test.context.ActiveProfiles;
+import reactor.core.publisher.Mono;
+import reactor.test.StepVerifier;
+import ru.yandex.practicum.mymarket.common.dto.SortMode;
+import ru.yandex.practicum.mymarket.config.R2dbcInitConfig;
 import ru.yandex.practicum.mymarket.items.model.ItemEntity;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-@DataJpaTest
+@DataR2dbcTest
+@Import(R2dbcInitConfig.class)
 @ActiveProfiles("test")
 class ItemRepositoryTest {
 
     @Autowired
     private ItemRepository itemRepository;
 
-    @Test
-    void findByTitleOrDescriptionContainingIgnoreCase_findsByTitle() {
-        itemRepository.save(new ItemEntity("Aboba", "description 1", "/images/aboba.jpg", 1200L));
-        itemRepository.save(new ItemEntity("Amoga", "description 1", "/images/amoga.jpg", 5900L));
-
-        Page<ItemEntity> page = itemRepository
-                .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
-                        "ab",
-                        "ab",
-                        PageRequest.of(0, 10)
-                );
-
-        assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().getFirst().getTitle()).isEqualTo("Aboba");
+    @BeforeEach
+    void cleanup() {
+        itemRepository.deleteAll().block();
     }
 
     @Test
-    void findByTitleOrDescriptionContainingIgnoreCase_findsByDescription() {
-        itemRepository.save(new ItemEntity("Aboba", "Small aboba", "/images/aboba.jpg", 450L));
-        itemRepository.save(new ItemEntity("Amoga", "Big amoga", "/images/amoga.jpg", 4500L));
+    void countBySearch_countsFiltered() {
+        Mono.when(
+                itemRepository.save(new ItemEntity("Aboba", "description", "/i1", 100L)).then(),
+                itemRepository.save(new ItemEntity("Amoga", "Big amoga", "/i2", 200L)).then(),
+                itemRepository.save(new ItemEntity("Lamp", "Warm light", "/i3", 300L)).then()
+        ).block();
 
-        Page<ItemEntity> page = itemRepository
-                .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
-                        "big",
-                        "big",
-                        PageRequest.of(0, 10)
-                );
+        StepVerifier.create(itemRepository.countBySearch("am"))
+                .assertNext(cnt -> assertThat(cnt).isEqualTo(2L))
+                .verifyComplete();
 
-        assertThat(page.getContent()).hasSize(1);
-        assertThat(page.getContent().getFirst().getTitle()).isEqualTo("Amoga");
+        StepVerifier.create(itemRepository.countBySearch(""))
+                .assertNext(cnt -> assertThat(cnt).isEqualTo(3L))
+                .verifyComplete();
     }
 
     @Test
-    void pagingAndSorting_works() {
-        itemRepository.save(new ItemEntity("B", "d", "/images/1.jpg", 300L));
-        itemRepository.save(new ItemEntity("A", "d", "/images/2.jpg", 100L));
-        itemRepository.save(new ItemEntity("C", "d", "/images/3.jpg", 200L));
+    void findPage_searchesAndSortsByPrice() {
+        Mono.when(
+                itemRepository.save(new ItemEntity("B", "d", "/i1", 300L)).then(),
+                itemRepository.save(new ItemEntity("A", "d", "/i2", 100L)).then(),
+                itemRepository.save(new ItemEntity("C", "d", "/i3", 200L)).then()
+        ).block();
 
-        Page<ItemEntity> page = itemRepository.findAll(
-                PageRequest.of(0, 2, Sort.by(Sort.Direction.ASC, "price"))
-        );
+        StepVerifier.create(itemRepository.findPage("", SortMode.PRICE, 2, 0).collectList())
+                .assertNext(list -> {
+                    assertThat(list).hasSize(2);
+                    assertThat(list.get(0).getPrice()).isEqualTo(100L);
+                    assertThat(list.get(1).getPrice()).isEqualTo(200L);
+                })
+                .verifyComplete();
+    }
 
-        assertThat(page.getContent()).hasSize(2);
-        assertThat(page.getContent().get(0).getPrice()).isEqualTo(100L);
-        assertThat(page.getContent().get(1).getPrice()).isEqualTo(200L);
-        assertThat(page.hasNext()).isTrue();
+    @Test
+    void findPage_searchByTitleOrDescription_ignoreCase() {
+        Mono.when(
+                itemRepository.save(new ItemEntity("Aboba", "Small one", "/i1", 100L)).then(),
+                itemRepository.save(new ItemEntity("Amoga", "Big amoga", "/i2", 200L)).then()
+        ).block();
+
+        StepVerifier.create(itemRepository.findPage("big", SortMode.NO, 10, 0).collectList())
+                .assertNext(list -> {
+                    assertThat(list).hasSize(1);
+                    assertThat(list.getFirst().getTitle()).isEqualTo("Amoga");
+                })
+                .verifyComplete();
     }
 }
